--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .button {
+        @apply text-black bg-sky-500 rounded w-max mt-2 px-6 py-2 font-semibold shadow  hover:bg-sky-400 duration-75 transition-all;
+    }
+}
+
+@layer utilities {
+    .shadow-screen {
+        box-shadow: 0 0 0 10000px rgba(10, 10, 10, 0.6);
+    }
+}
